--- a/css/main.css
+++ b/css/main.css
@@ -1172,6 +1172,11 @@ article#registry h1 {
   display: inline;
 }
 
+.registry-options p {
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+}
+
 .registry-options .circular {
   height: 160px;
   width: 160px;
@@ -1203,8 +1208,13 @@ article#registry h1 {
 }
 
  @media screen and (max-width: 480px) {
+
   #main article {
     padding-bottom: 10px;
+  }
+
+  #bg:after {
+    background-image: url('/images/bg-mobile.jpg');
   }
 
   .retailer {
@@ -1212,3 +1222,8 @@ article#registry h1 {
   }
  }
 
+@media screen and (min-width: 1650px) {
+  .retailer i {
+    font-size: 3.35em;
+  }
+}
